# inzynier

./: CMakeLists.txt  Makefile  README.md  algorithm.c  algorithm.h  axles.c  build.sh  build_with_gui.sh  data.lvm  functions.c  functions.h  main.c  run.sh  structures.c  structures.h  version.h  watcher.c
data/: stanowisko_1.lvm  stanowisko_2.lvm
doc/bibliografia/: bibliografia.bib  bibliografia.lyx
doc/praca/: IEEEtranS.bst  aghdpl.cls  bibliografia.bib  praca.lyx
doc/praca/img/: dlugosc-m-piezo.fig  dlugosc-m.fig  inductivedetector.eps  r-x-ku-piezo-2.fig  r-x-ku-piezo-brakujace-2.fig  r-x-ku-piezo-brakujace.fig  r-x-ku-piezo-podniesiona-2.fig  r-x-ku-piezo-podniesiona.fig  r-x-ku-piezo.fig  r-x-m-kp-ku.fig  r-x-przetwarzanie.fig  r-x-wstepne.fig  terminal.eps  test-terminal.eps  wydajnosc_programu.fig
doc/praca/util/: dane_wydajnosc_programu.mat  skrypt_wydajnosc_programu.m
doc/praca/util/wykresy-algorytmy/: alg1.m  alg2.m  sygnaly-dlugosc-pojazdu.mat  sygnaly-ku-piezo-brakujace.mat  sygnaly-ku-piezo-podniesiona.mat  sygnaly-ku-piezo.mat  sygnaly-m-kp-ku.mat  sygnaly-przetwarzanie.mat  sygnaly-wejsciowe.mat
doc/praca/util/wykresy-analiza/: ciezarowy3-M120621_110208.fig  ciezarowy3-M120621_110208.mat  ciezarowy3-M120621_112946.fig  skr.m  (+25 more)
examples/: example1.sh  example2.sh  example_watcher_gui.sh  test.sh
gui/: CMakeLists.txt  gui.cpp  gui.h  gui.pro  inputthread.cpp  inputthread.h  vehicle.h
kiss_fft/: CMakeLists.txt  kiss_fft.s  kiss_fft_short.s
man/: axles.l
matlab/: M120620_152013.lvm  algorytm2.m
matlab/funkcje/: FigureWhitedrZM.m  fun_LP_FFT_filtr.m  fun_algorytm2_test.m  fun_load.m  fun_okno.m  fun_przesun.m  fun_rm_offset.m  fun_synchronizacja.m  fun_synchronizacja.m~  fun_test_zgodnosci.m  komparator.m  licznik.m  licznik_prog.m  predkosc_dlugosc.m  rm_offset.m  rysunek_dr.asv  rysunek_rej.m  statystyka.m  suma_plus.m  unormowanie_do1.m
src/: CMakeLists.txt
src/axles/: CMakeLists.txt  algorithm.c  algorithm.h  axles.c  functions.c  functions.h  structures.c  structures.h
src/axles/kiss_fft/: CMakeLists.txt
src/config/: CMakeLists.txt  config1.cfg  config2.cfg  example.cfg
src/gui/: CMakeLists.txt  gui.cpp  gui.h  gui.ui  inputthread.cpp  inputthread.h
src/include/: sensor_configuration.h  version.h
src/man/: CMakeLists.txt  axles.1  watcher.1
src/swapper/: CMakeLists.txt  swapper  swapper1  swapper2
src/watcher/: CMakeLists.txt  watcher.c
test/: config.json  test_alg.py  test_alg2.py  test_runner.sh
